fix: Add link redirection to vue js website

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h2>Skill</h2>
         <ul>
             <li><a href="https://vuejs.org" target="_blank" style="text-decoration:none;color:black">Vue.js</a> - Memiliki kemampuan untuk membuat aplikasi modern.</li>
-            <li>React.js - Dapat membangun UI yang dinamis.</li>
+            <li><a href="https://react.dev" target="_blank" style="text-decoration:none;color:black">React.js</a>  - Dapat membangun UI yang dinamis.</li>
             <li>AngularJS - Sangat cocok untuk pengembangan proyek berskala besar.</li>
         </ul>
     </section>
