fix: Add link redirection to angular js website

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <ul>
             <li><a href="https://vuejs.org" target="_blank" style="text-decoration:none;color:black">Vue.js</a> - Memiliki kemampuan untuk membuat aplikasi modern.</li>
             <li><a href="https://react.dev" target="_blank" style="text-decoration:none;color:black">React.js</a>  - Dapat membangun UI yang dinamis.</li>
-            <li>AngularJS - Sangat cocok untuk pengembangan proyek berskala besar.</li>
+            <li><a href="https://angularjs.org" target="_blank" style="text-decoration:none;color:black">AngularJS</a>  - Sangat cocok untuk pengembangan proyek berskala besar.</li>
         </ul>
     </section>
 
