--- a/index.html
+++ b/index.html
@@ -104,24 +104,49 @@
     <section id="skills" class="animated">
         <h2>Skill</h2>
         <ul>
-            <li><a href="https://vuejs.org" target="_blank" style="text-decoration:none;color:black">Vue.js</a> - Memiliki kemampuan untuk membuat aplikasi modern.</li>
-            <li><a href="https://react.dev" target="_blank" style="text-decoration:none;color:black">React.js</a>  - Dapat membangun UI yang dinamis.</li>
-            <li><a href="https://angularjs.org" target="_blank" style="text-decoration:none;color:black">AngularJS</a>  - Sangat cocok untuk pengembangan proyek berskala besar.</li>
+            <li><a href="https://vuejs.org" target="_blank" style="text-decoration:none;color:black">Vue.js</a></li>
+            <li><a href="https://react.dev" target="_blank" style="text-decoration:none;color:black">React.js</a></li>
+            <li><a href="https://angularjs.org" target="_blank" style="text-decoration:none;color:black">AngularJS</a></li>
         </ul>
     </section>
 
     <section id="projects" class="animated">
         <h2>Portfolio</h2>
-        <p>Silakan lihat proyek terbaru saya.</p>
-        <ul>
-            <li><strong>Todo App (Aplikasi Todo)</strong> - Aplikasi daftar tugas sederhana menggunakan Vue.js.</li>
-            <li><strong>Weather Dashboard (Dasbor Cuaca)</strong> - Dasbor cuaca yang kuat menggunakan React.js.</li>
-            <li><strong>Task Manager (Pengelola Tugas)</strong> - Alat manajemen tugas yang canggih menggunakan AngularJS.</li>
-        </ul>
+        <p>Berikut adalah proyek-proyek profesional yang telah saya kerjakan selama perjalanan karir saya:</p>
+    <ul>
+        <li>
+            <strong>Human Resource Information System (Pusintek)</strong>
+            <p>Membangun dan memelihara solusi berbasis web yang dirancang untuk menyederhanakan proses organisasi, serta meningkatkan efisiensi dalam pengelolaan sumber daya manusia.</p>
+        </li>
+        <li>
+            <strong>Project Management & Asset Management (Tomps.id)</strong>
+            <p>
+                <strong>Project Management:</strong> Membuat solusi manajemen proyek waktu nyata yang meningkatkan perencanaan, pemantauan, dan evaluasi proyek, dengan peningkatan keterlibatan pengguna sebesar 30%.
+                <br>
+                <strong>Asset Management:</strong> Mengembangkan portal komprehensif untuk manajemen aset tetap, seperti gedung, lahan, dan pembangkit listrik, mengurangi kesalahan pelacakan aset sebesar 20%.
+            </p>
+        </li>
+        <li>
+            <strong>Digital Course Platform (Skolla EdTech)</strong>
+            <p>Memimpin desain ulang dan optimalisasi aplikasi untuk memastikan responsivitas di berbagai perangkat. Berhasil mengintegrasikan Zoom Meeting SDK dan Midtrans Payment SDK untuk meningkatkan pengalaman pengguna.</p>
+        </li>
+        <li>
+            <strong>Self-Service Hotel & Watch Together Platform (Frackment ID)</strong>
+            <p>
+                <strong>Turu Hotel:</strong> Mengembangkan aplikasi pemesanan hotel mandiri menggunakan NuxtJS Framework.
+                <br>
+                <strong>Noblar:</strong> Merancang platform berbasis web untuk kolaborasi menonton konten secara bersama menggunakan ReactJS Framework.
+            </p>
+        </li>
+        <li>
+            <strong>Dashboard Monitoring Platform (Mitra Edu Teknologi)</strong>
+            <p>Migrasi teknologi frontend ke VueJS untuk aplikasi monitoring Rumah Sehat di Depok, Indonesia. Meningkatkan pengalaman pengguna dan efisiensi aplikasi.</p>
+        </li>
+    </ul>
     </section>
 
     <footer class="animated">
-        <p>&copy; 2024 Pengembang Frontend Akram Rahardi R. Semua hak dilindungi.</p>
+        <p>&copy; 2025 Frontend Web Developer Akram Rahardi R.</p>
     </footer>
 
     <script>
