Refactor into Vue

--- a/index.html
+++ b/index.html
@@ -1,163 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Developer</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <style>
-        body {
-            background-color: #f0e1c2;
-            color: #333;
-            font-family: "MS Mincho", serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            font-weight: normal;
-        }
-
-        nav {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #d2691e;
-        }
-
-        section {
-            background-color: #ffffff;
-            border: 2px solid #333;
-            padding: 15px;
-            margin-bottom: 20px;
-            transition: transform 0.3s;
-        }
-
-        section:hover {
-            transform: scale(1.02);
-        }
-
-        section h2 {
-            font-size: 1.8em;
-            font-weight: normal;
-            border-bottom: 1px dashed #333;
-            padding-bottom: 5px;
-            margin-bottom: 10px;
-        }
-
-        footer {
-            text-align: center;
-            border-top: 2px solid #333;
-            padding-top: 10px;
-            margin-top: 20px;
-            font-size: 0.9em;
-        }
-
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        .animated {
-            animation: fadeIn 2s ease-in-out;
-        }
-    </style>
-</head>
-<body>
-    <header class="animated">
-        <h1>Frontend Developer</h1>
-        <p>Akram Rahardi R</p>
-    </header>
-
-    <nav class="animated">
-        <a href="#about">Tentang Saya</a>
-        <a href="#skills">Keahlian</a>
-        <a href="#projects">Proyek</a>
-    </nav>
-
-    <section id="about" class="animated">
-        <h2>Tentang Saya</h2>
-        <p>Saya Akram Rahardi R, seorang pengembang frontend asal Indonesia. Saya memiliki keahlian dalam Vue.js, React.js, dan AngularJS. Portofolio ini dibuat untuk memperkenalkan keahlian dan proyek-proyek yang telah saya kerjakan.</p>
-    </section>
-
-    <section id="skills" class="animated">
-        <h2>Skill</h2>
-        <ul>
-            <li><a href="https://vuejs.org" target="_blank" style="text-decoration:none;color:black">Vue.js</a></li>
-            <li><a href="https://react.dev" target="_blank" style="text-decoration:none;color:black">React.js</a></li>
-            <li><a href="https://angularjs.org" target="_blank" style="text-decoration:none;color:black">AngularJS</a></li>
-        </ul>
-    </section>
-
-    <section id="projects" class="animated">
-        <h2>Portfolio</h2>
-        <p>Berikut adalah proyek-proyek profesional yang telah saya kerjakan selama perjalanan karir saya:</p>
-    <ul>
-        <li>
-            <strong>Human Resource Information System (Pusintek)</strong>
-            <p>Membangun dan memelihara solusi berbasis web yang dirancang untuk menyederhanakan proses organisasi, serta meningkatkan efisiensi dalam pengelolaan sumber daya manusia.</p>
-        </li>
-        <li>
-            <strong>Project Management & Asset Management (Tomps.id)</strong>
-            <p>
-                <strong>Project Management:</strong> Membuat solusi manajemen proyek waktu nyata yang meningkatkan perencanaan, pemantauan, dan evaluasi proyek, dengan peningkatan keterlibatan pengguna sebesar 30%.
-                <br>
-                <strong>Asset Management:</strong> Mengembangkan portal komprehensif untuk manajemen aset tetap, seperti gedung, lahan, dan pembangkit listrik, mengurangi kesalahan pelacakan aset sebesar 20%.
-            </p>
-        </li>
-        <li>
-            <strong>Digital Course Platform (Skolla EdTech)</strong>
-            <p>Memimpin desain ulang dan optimalisasi aplikasi untuk memastikan responsivitas di berbagai perangkat. Berhasil mengintegrasikan Zoom Meeting SDK dan Midtrans Payment SDK untuk meningkatkan pengalaman pengguna.</p>
-        </li>
-        <li>
-            <strong>Self-Service Hotel & Watch Together Platform (Frackment ID)</strong>
-            <p>
-                <strong>Turu Hotel:</strong> Mengembangkan aplikasi pemesanan hotel mandiri menggunakan NuxtJS Framework.
-                <br>
-                <strong>Noblar:</strong> Merancang platform berbasis web untuk kolaborasi menonton konten secara bersama menggunakan ReactJS Framework.
-            </p>
-        </li>
-        <li>
-            <strong>Dashboard Monitoring Platform (Mitra Edu Teknologi)</strong>
-            <p>Migrasi teknologi frontend ke VueJS untuk aplikasi monitoring Rumah Sehat di Depok, Indonesia. Meningkatkan pengalaman pengguna dan efisiensi aplikasi.</p>
-        </li>
-    </ul>
-    </section>
-
-    <footer class="animated">
-        <p>&copy; 2025 Frontend Web Developer Akram Rahardi R.</p>
-    </footer>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const sections = document.querySelectorAll("section");
-            sections.forEach(section => {
-                section.addEventListener("click", () => {
-                    // alert(`You clicked on the ${section.querySelector("h2").textContent} section.`);
-                });
-            });
-        });
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Akram Rahardi - Frontend Developer</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
