adds vite preload error handling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Akram Rahardi - Frontend Developer</title>
+    <script>
+      window.addEventListener('vite:preloadError', (event) => {
+        // You can log the event if you want to inspect it
+        console.error('Vite preload error:', event);
+        console.error('Attempting to reload the page...');
+        window.location.reload();
+      });
+    </script>
   </head>
   <body>
     <div id="app"></div>
